Modifications added on bt_client The modification included in proper use of Ui components and used a mix of MVI to handle UI events in the viewmodel. Changes includes simplification of the client package. UIEventsSideEffect acts as a side effect to catch and show the UiEvents from the viewmodel

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
   <dimen name="sc_padding">12dp</dimen>
   <dimen name="min_device_image_size">32dp</dimen>
+  <dimen name="sc_padding_secondary">6dp</dimen>
+  <dimen name="connection_chip_offset">10dp</dimen>
 </resources>
