--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
   <dimen name="min_device_image_size">32dp</dimen>
   <dimen name="sc_padding_secondary">6dp</dimen>
   <dimen name="connection_chip_offset">10dp</dimen>
+  <dimen name="lazy_colum_content_padding">16dp</dimen>
 </resources>
