--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,32 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:aapt="http://schemas.android.com/aapt"
-  android:width="108dp"
-  android:height="108dp"
-  android:viewportWidth="108"
-  android:viewportHeight="108">
-  <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-    <aapt:attr name="android:fillColor">
-      <gradient
-        android:endX="85.84757"
-        android:endY="92.4963"
-        android:startX="42.9492"
-        android:startY="49.59793"
-        android:type="linear">
-        <item
-          android:color="#44000000"
-          android:offset="0.0" />
-        <item
-          android:color="#00000000"
-          android:offset="1.0" />
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-    android:fillColor="#FFFFFF"
-    android:fillType="nonZero"
-    android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-    android:strokeWidth="1"
-    android:strokeColor="#00000000" />
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="501.6"
+    android:viewportHeight="501.6">
+  <group android:scaleX="0.47055554"
+      android:scaleY="0.47055554"
+      android:translateX="132.78467"
+      android:translateY="132.78467">
+    <path
+        android:pathData="M218.8,404c-13.6,0 -24,-10.4 -24,-24v-91.2c0,-13.6 10.4,-24 24,-24s24,10.4 24,24v90.4C242.8,392.8 232.4,404 218.8,404z"
+        android:fillColor="#005EF4"/>
+    <path
+        android:pathData="M218.8,140.8c-13.6,0 -24,-10.4 -24,-24V24c0,-13.6 10.4,-24 24,-24s24,10.4 24,24v92.8C242.8,129.6 232.4,140.8 218.8,140.8z"
+        android:fillColor="#005EF4"/>
+    <path
+        android:pathData="M222,500.8c-6.4,0 -12,-2.4 -16.8,-7.2c-9.6,-9.6 -9.6,-24.8 0,-33.6l114.4,-113.6L121.2,148c-9.6,-9.6 -9.6,-24.8 0,-33.6c9.6,-9.6 24.8,-9.6 33.6,0l232,232l-147.2,148C234.8,498.4 228.4,500.8 222,500.8z"
+        android:fillColor="#36A4FF"/>
+    <path
+        android:pathData="M155.6,114.4l232,232l-148,148c-4.8,4.8 -11.2,7.2 -16.8,7.2s-12,-2.4 -16.8,-7.2c-9.6,-9.6 -9.6,-24.8 0,-33.6l113.6,-114.4L121.2,148"
+        android:fillColor="#1085F9"/>
+    <path
+        android:pathData="M283.89,242.61l70.14,70.14l-33.94,33.94l-70.14,-70.14z"
+        android:fillColor="#005EF4"/>
+    <path
+        android:pathData="M138,393.6c-6.4,0 -12,-2.4 -16.8,-7.2c-9.6,-9.6 -9.6,-24.8 0,-33.6l198.4,-198.4L205.2,40.8c-9.6,-9.6 -9.6,-24.8 0,-33.6c9.6,-9.6 24.8,-9.6 33.6,0l148.8,147.2l-232,232C150.8,391.2 144.4,393.6 138,393.6z"
+        android:fillColor="#36A4FF"/>
+    <path
+        android:pathData="M121.2,352.8l198.4,-198.4L205.2,40.8c-9.6,-9.6 -9.6,-24.8 0,-33.6c9.6,-9.6 24.8,-9.6 33.6,0l148.8,147.2l-232,232"
+        android:fillColor="#1085F9"/>
+  </group>
 </vector>
