Added protobuf to store bluetooth classic settings Some of the settings for Bluetooth Classic is also added prefer bt_classic_settings.proto BTSettingsDataSore provides the settings with the actual implementation BTSettingsDatastoreImpl The newly added enums in domain.settings represents the states  which the settings will store Added selectors as like in bluetooth low energy settings

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
   <dimen name="messages_list_horizontal_padding">8dp</dimen>
   <dimen name="messages_list_vertical_padding">6dp</dimen>
   <dimen name="messages_text_field_spacing">12dp</dimen>
+  <dimen name="page_spacing">12dp</dimen>
 </resources>
